--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -2,34 +2,34 @@
 LANGUAGE=Deutsch
 LANGUAGE_ISO_CODE=de
 
-SING_LOADING=Lädt...
+SING_LOADING=Lädt …
 SING_LOADING_SONGS=Lade Titel aus Verz.  %s
 
 SING_SING=Singen
-SING_SING_DESC=Singen
+SING_SING_DESC=Im Solo- oder Duettmodus singen
 
 SING_MULTI=Party
 SING_MULTI_DESC=Rundenbasiertes Teamspiel
 
 SING_JUKEBOX=Jukebox
-SING_JUKEBOX_DESC=Spiele meine Sammlung ab
+SING_JUKEBOX_DESC=Meine Sammlung abspielen
 
 SING_STATS=Statistiken
-SING_STATS_DESC=Die Statistiken anschauen
+SING_STATS_DESC=Die Statistiken ansehen
 
-SING_OPTIONS_DESC=Verändere die Spieleinstellungen
+SING_OPTIONS_DESC=Die Spieleinstellungen verändern
 
 SING_EXIT=Beenden
 SING_EXIT_DESC=Spiel verlassen
 
 SING_ABOUT=Über
-SING_ABOUT_DESC=Über Utrastar Deluxe WorldParty
+SING_ABOUT_DESC=Über Utrastar WorldParty
 
 SING_PLAYER_TITLE=Profile
 SING_PLAYER_READY=Spieler bereit zum Singen
 SING_PLAYER_COUNT=Anzahl der Spieler
 SING_PLAYER_EDIT=Spieler anpassen
-SING_PLAYER_NAME=Schreib deinen Namen
+SING_PLAYER_NAME=Gib deinen Namen ein
 SING_PLAYER_COLOR=Wähle eine Farbe
 SING_PLAYER_LEVEL=Wähle ein Level
 SING_PLAYER_AVATAR=Wähle deinen Avatar
@@ -37,33 +37,33 @@ SING_PLAYER_AVATAR=Wähle deinen Avatar
 OPTION_VALUE_EASY=Einfach
 OPTION_VALUE_MEDIUM=Mittel
 OPTION_VALUE_HARD=Schwierig
-;TODO: OPTION_VALUE_TRAINING=Training
+OPTION_VALUE_TRAINING=Üben
 
 SING_OPTIONS=Optionen
 
 SING_OPTIONS_GENERAL_LANGUAGE=Sprache
-SING_OPTIONS_GENERAL_SONGMENU=Menü
-SING_OPTIONS_GENERAL_DUETS=DuettScores
+SING_OPTIONS_GENERAL_SONGMENU=Songmenü
+SING_OPTIONS_GENERAL_DUETS=Duette
 SING_OPTIONS_GENERAL_TABS=Ordner
 SING_OPTIONS_GENERAL_SORTING=Sortierung
 SING_OPTIONS_GENERAL_SHOWSCORES=Punktzahl anzeigen
-SING_OPTIONS_GENERAL_SINGSCORES=Punkte vergeben
+SING_OPTIONS_GENERAL_SINGSCORES=Punktewertung beim Singen
 
-;TODO: SING_OPTIONS_GENERAL_LANGUAGE_DESC=Change the language of the game
-;TODO: SING_OPTIONS_GENERAL_SONGMENU_DESC=Select the mode to show the songs
-;TODO: SING_OPTIONS_GENERAL_DUETS_DESC=Show duets on songs
-;TODO: SING_OPTIONS_GENERAL_TABS_DESC=Sort songs in folders
-;TODO: SING_OPTIONS_GENERAL_SORTING_DESC=Sort songs by
-;TODO: SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Show your score in song selection screen
-;TODO: SING_OPTIONS_GENERAL_SINGSCORES_DESC=Show a score box in sing screen
-;TODO: SING_OPTIONS_GENERAL_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+SING_OPTIONS_GENERAL_LANGUAGE_DESC=Die Sprache des Spiels ändern
+SING_OPTIONS_GENERAL_SONGMENU_DESC=Das Songmenü anpassen
+SING_OPTIONS_GENERAL_DUETS_DESC=Duettvarianten von Songs anzeigen
+SING_OPTIONS_GENERAL_TABS_DESC=Songs in Ordnern sortieren
+SING_OPTIONS_GENERAL_SORTING_DESC=Songs sortieren nach
+SING_OPTIONS_GENERAL_SHOWSCORES_DESC=Erreichte Punktzahl in der Songauswahl anzeigen
+SING_OPTIONS_GENERAL_SINGSCORES_DESC=Punktzahl beim Singen anzeigen
+SING_OPTIONS_GENERAL_MEDLEYC_DESC=Songmedley automatisch erkennen, falls nicht vorhanden
 
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Raster
 OPTION_VALUE_CAROUSEL=Karussell
 OPTION_VALUE_SLOT_MACHINE=Walze
 OPTION_VALUE_LIST=Liste
-;TODO: OPTION_VALUE_COMPACT_LIST=Compact list
+OPTION_VALUE_COMPACT_LIST=Kompakte Liste
 OPTION_VALUE_MOSAIC=Kacheln
 
 OPTION_VALUE_ON=An
@@ -77,49 +77,49 @@ OPTION_VALUE_TITLE=Titel
 OPTION_VALUE_ARTIST=Künstler
 OPTION_VALUE_ARTIST2=Künstler2
 OPTION_VALUE_YEAR=Jahr
-OPTION_VALUE_DECADE=Dekade
+OPTION_VALUE_DECADE=Jahrzehnt
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=Wenn vorhanden
 
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Vollbild
 SING_OPTIONS_GRAPHICS_RESOLUTION=Auflösung
-SING_OPTIONS_GRAPHICS_SCREENFADE=Bildschirm-Fade
+SING_OPTIONS_GRAPHICS_SCREENFADE=Bildschirmüberblenden
 SING_OPTIONS_GRAPHICS_EFFECTSING=Singeffekte
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualisierung
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Videogröße
 
-;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode
-;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
-;TODO: SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Replace video with visual effects
-;TODO: SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Select video size
+SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Zwischen Vollbild- und Fenstermodus wechseln
+SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Bildschirmauflösung einstellen
+SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Überblendeffekte beim Menüwechsel anzeigen
+SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Singeffekte bei „Golden Notes“ anzeigen
+SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Visualisierung anstatt Videos abspielen
+SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Anzeigegröße der Videos einstellen
 
-OPTION_VALUE_BORDERLESS=Fenster-Vollbild
+OPTION_VALUE_BORDERLESS=Randloser Fenstermodus
 
 OPTION_VALUE_WHENNOVIDEO=Wenn kein Video
-OPTION_VALUE_WHENNOVIDEOANDIMAGE=Wenn kein Video und kein Bild
+OPTION_VALUE_WHENNOVIDEOANDIMAGE=Wenn weder Video noch Bild
 
 OPTION_VALUE_HALF=Halb
 OPTION_VALUE_FULL_VID=Voll (Video)
 OPTION_VALUE_FULL_VID_BG=Voll (HG & Video)
 
-SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Mikrofon Wiedergabe
+SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Mikrofonwiedergabe
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Hintergrundmusik
-SING_OPTIONS_SOUND_CLICK_ASSIST=Click-Assistent
-SING_OPTIONS_SOUND_BEAT_CLICK=Beat-Click
+SING_OPTIONS_SOUND_CLICK_ASSIST=Klick-Unterstützung
+SING_OPTIONS_SOUND_BEAT_CLICK=Klicken im Takt
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Normalisierung
-SING_OPTIONS_SOUND_PREVIEWVOLUME=Vorschau Lautst.
-SING_OPTIONS_SOUND_PREVIEWFADING=Vorschau Fading
+SING_OPTIONS_SOUND_PREVIEWVOLUME=Lautstärke i. d. Vorschau
+SING_OPTIONS_SOUND_PREVIEWFADING=Ausblenden i. d. Vorschau
 
-;TODO: SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Listen to your voice
-;TODO: SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC=Listen to the background music
-;TODO: SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Listen to click on each note
-;TODO: SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Listen to tempo click
-;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalize songs volume
-;TODO: SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Adjust volume in song selection
-;TODO: SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Fade out audio when changing songs
+SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Eigene Stimme wiedergeben
+SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC=Hintergrundmusik wiedergeben
+SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Klick bei jeder Note wiedergeben
+SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Tempoklick wiedergeben
+SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Lautstärke der Songs angleichen
+SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Lautstärke i. d. Songauswahl anpassen
+SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Musik ausblenden beim Songwechsel
 
 OPTION_VALUE_GAIN_SOFT=Sanft
 OPTION_VALUE_GAIN_MEDIUM=Medium
@@ -217,12 +217,12 @@ SING_OPTIONS_NETWORK_DELETE_PLAYER=Spieler %0:s wirklich von der Webseite %1:s l
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Einfg
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Entf
 
-;TODO: SING_OPTIONS_NETWORK_WEBSITE_DESC=Website where the scores will be sent
-;TODO: SING_OPTIONS_NETWORK_USERNAME_DESC=Registered account
-;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Send your local name
-;TODO: SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Automate scores
-;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Send this player's scores
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Auto-Send score from this number
+SING_OPTIONS_NETWORK_WEBSITE_DESC=Webseite, an die das Ergebnis übermittelt wird
+SING_OPTIONS_NETWORK_USERNAME_DESC=Registrierter Account
+SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC=Übermittelt den lokalen Spielernamen
+SING_OPTIONS_NETWORK_AUTO_MODE_DESC=Übermittlung automatisieren
+SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC=Die Punktzahlen dieses Spielers übermitteln
+SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC=Punktzahl, ab der autom. übermittelt wird
 
 OPTION_PLAYER_1=Spieler 1
 OPTION_PLAYER_2=Spieler 2
@@ -595,18 +595,18 @@ SING_SONGS_MYSCORES=Meine Ergebnisse
 NAME_PLAYERS_COUNT=Anzahl der Spieler
 NAME_CURRENT_PLAYER=Spieler
 
-JUKEBOX_MODE=Jukebox Modus
+JUKEBOX_MODE=Jukebox-Modus
 
-ABOUT_MAIN=Über...
+ABOUT_MAIN=Über …
 ABOUT_USWP_DEVELOPEDBY=Entwickelt von
-ABOUT_CHECK_CHECKING=Suche nach Aktualisierungen...
+ABOUT_CHECK_CHECKING=Suche nach Aktualisierungen …
 ABOUT_CHECK_AVAILABLE=Eine neue Version ist verfügbar
 ABOUT_CHECK_UPTODATE=WorldParty ist aktuell
 ABOUT_CHECK_CONNECTION=Keine Internetverbindung
-ABOUT_OVERVIEW=Entdecke eine neue Art alleine oder mit Freunden zu singen. \n Spaß ist garantiert. \n\nWorldParty ist ein Zweig der orginal Version Ultrastar Deluxe 1.1 gestaltet und entwickelt vom UltraStar España Team, die größe Karaoke Community.\n\n\nDies Programm ist frei und unter der GPL lizenziert. \n\n Für weitere Informationen besucht uns auf: \n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Entdecke eine neue Art, alleine oder mit Freunden zu singen. \n Spaß ist garantiert. \n\nWorldParty ist ein Zweig des originalen Ultrastar Deluxe 1.1 und wurde entworfen sowie entwickelt vom UltraStar-España-Team, der größten Karaoke-Community.\n\n\nDieses Programm ist frei und unter der GPL lizenziert. \n\n Für weitere Informationen besuche uns auf: \n\nhttps://ultrastar-es.org
 
 DEVELOPERS_TITLE=Entwickelt von
-DEVELOPERS_OVERVIEW=Menschen, die zu diesem Projekt beigetragen haben:\n\n\n%s\n\n\n Besuchen Sie uns für weitere Informationen.\n%s
+DEVELOPERS_OVERVIEW=Menschen, die zu diesem Projekt beigetragen haben:\n\n\n%s\n\n\n Besuche uns für weitere Informationen.\n%s
 
 SCREENSHOT_SAVED=Bildschirmfoto gesichert
 SCREENSHOT_FAILED=Konnte Bildschirmfoto nicht sichern
@@ -619,20 +619,20 @@ MSG_END_PARTY=Party-Modus wirklich beenden?
 
 ERROR_NO_SONGS=Keine Songs vorhanden.
 ERROR_NO_PLUGINS=Keine Plugins vorhanden.
-ERROR_LOADING_SONGS=Warten Sie, bis alle Songs geladen sind
+ERROR_LOADING_SONGS=Warte, bis alle Songs geladen sind
 ERROR_CORRUPT_SONG=Song konnte nicht geladen werden.
 ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Song konnte nicht geladen werden: Datei wurde nicht gefunden.
 ERROR_CORRUPT_SONG_NO_NOTES=Song konnte nicht geladen werden: Es wurden keine Noten gefunden.
 ERROR_CORRUPT_SONG_NO_BREAKS=Song konnte nicht geladen werden: Es wurden keine Satzwechsel gefunden.
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song konnte nicht geladen werden: Fehler beim Einlesen der Zeile %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Mehrere Mikrofone für Spieler %d gewählt\n\nÜberprüfen Sie Ihre Mikrofonoptionen.
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Kein Mikrofon für Spieler %d gewählt\n\nÜberprüfen Sie Ihre Mikrofonoptionen.
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Mehrere Mikrofone für Spieler %d gewählt\n\nÜberprüfe deine Mikrofonoptionen.
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Kein Mikrofon für Spieler %d gewählt\n\nÜberprüfe deine Mikrofonoptionen.
 
 ;# ---------------------------
 ;#  -- COMMON TRANSLATIONS --
 ;# ---------------------------
 
-C_ABOUT=Über...
+C_ABOUT=Über …
 C_ADVANCED=Erweitert
 C_ALL=Alle
 C_APPLY_CHANGES=Änderungen übernehmen
@@ -675,7 +675,7 @@ C_COLOR_YELLOW=Gelb
 C_CONTINUE=Fortsetzen
 C_CREATEDBY=Erstellt von
 
-;TODO: C_DELETE_USER=Delete user
+C_DELETE_USER=User löschen
 C_DIFFICULTY=Schwierigkeit
 C_DUET=Duett
 C_DUETS=Duette
@@ -687,11 +687,11 @@ C_FIXEDBY=Korrigiert von
 C_FOLDERS=Ordner
 
 C_GAME=Spiel
-;TODO: C_GENERAL=General
+C_GENERAL=Allgemein
 C_GRAPHICS=Grafik
 
 C_INFORMATION=Information
-;TODO: C_INSERT_USER=Insert user
+C_INSERT_USER=User einfügen
 C_INTERNET=Internet
 
 C_JOKER=Joker
@@ -703,7 +703,7 @@ C_LYRICS=Lyrics
 
 C_MEDLEY=Medley
 C_MEDLEYC=Medley berechnet
-;TODO: C_MICROPHONE=Microphone
+C_MICROPHONE=Mikrofon
 C_MICROPHONES=Mikrofone
 C_MODE=Modus
 
@@ -714,7 +714,7 @@ C_NO_INTERNET_CONNECTION=Keine Internetverbindung
 C_OPEN_PLAYLIST=Wiedergabeliste öffnen
 C_OPTIONS=Optionen
 
-;TODO: C_PLAYER=Player
+C_PLAYER=Spieler
 C_PLAYERS=Spieler
 C_PLAYLIST=Wiedergabeliste
 C_PROFILES=Profile
