--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -138,20 +138,20 @@ SING_OPTIONS_LYRICS_LINE=Phrase
 SING_OPTIONS_LYRICS_PROPERTY=Art
 SING_OPTIONS_LYRICS_POSITION=Position
 
-;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
-;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
-;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
-;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
-;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
-;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
-;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
-;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
-;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+SING_OPTIONS_LYRICS_MODE_DESC=Zwischen klassischem- und Jukebox-Modus wechseln, um Songtexte anzupassen
+SING_OPTIONS_LYRICS_STAVES_DESC=Waagerechte Linien beim Singen anzeigen
+SING_OPTIONS_LYRICS_POSITION_DESC=Position der Songtexte nach oben oder unten hin verschieben
+SING_OPTIONS_LYRICS_FONT_DESC=Schriftdicke anpassen
+SING_OPTIONS_LYRICS_EFFECT_DESC=Bewegungsart der Songtexte anpassen
+SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Transparenz der Songtexte anpassen
+SING_OPTIONS_LYRICS_LINE_DESC=Phrase auswählen, für die die Farbe gelten soll
+SING_OPTIONS_LYRICS_PROPERTY_DESC=Buchstabenteil, der angepasst werden soll, auswählen
+SING_OPTIONS_LYRICS_COLOR_DESC=Farbe der Songtexte anpassen
 
 OPTION_VALUE_TO_SING=Singen
 OPTION_VALUE_TOP=Oben
 OPTION_VALUE_BOTTOM=Unten
-OPTION_VALUE_OTHER=Other
+OPTION_VALUE_OTHER=Andere
 OPTION_VALUE_FILL=Füllung
 OPTION_VALUE_OUTLINE=Umriss
 
@@ -169,30 +169,30 @@ SING_OPTIONS_THEMES_THEME=Design
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Farbe
 
-;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
-;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
-;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+SING_OPTIONS_THEMES_THEME_DESC=Die Designs verändern die Symbole und ihre Anordnung
+SING_OPTIONS_THEMES_SKIN_DESC=Hintergrund auswählen
+SING_OPTIONS_THEMES_COLOR_DESC=Farbe der Symbole anpassen
 
 SING_OPTIONS_MICROPHONES_CARD=Soundkarte
 SING_OPTIONS_MICROPHONES_INPUT=Eingang
-;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
+SING_OPTIONS_MICROPHONES_CHANNEL=Mikrofon zuweisen
 SING_OPTIONS_MICROPHONES_THRESHOLD=Rauschunterdr.
-SING_OPTIONS_MICROPHONES_MIC_BOOST=Mic-Anhebung
+SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrofon-Verstärk.
 
-;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
-;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
-;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
-;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
-;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
+SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Wähle das Mikrofon, das eingestellt werden soll
+SING_OPTIONS_MICROPHONES_INPUT_DESC=Wähle den Eingang, an den das Mikrofon angeschlossen ist
+SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Weise das Mikrofon einem Spieler zu
+SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Hintergrundgeräusche des Mikrofons unterdrücken
+SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Erhöht die Lautstärke des Mikrofons
 
-SING_OPTIONS_ADVANCED_DEBUG=Debug
+SING_OPTIONS_ADVANCED_DEBUG=Entwickleroptionen
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oszilloskop
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Nach Songauswahl
 SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Sicherheitsabfr.
-;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
+SING_OPTIONS_ADVANCED_PARTYPOPUP=Party-Assistent
 SING_OPTIONS_ADVANCED_TOPSCORES=Höchstpunktzahlen
 
-;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+SING_OPTIONS_ADVANCED_DEBUG_DESC=FPS anzeigen
 ;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
 ;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
 ;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
@@ -240,7 +240,7 @@ MSG_INSERT_USER_DESC=Felder eintragen:
 MSG_INSERT_USER_ADD=Hinzufügen
 MSG_INSERT_USER_CANCEL=Abbrechen
 
-WEBSITE_NO_CONNECTION=Keine Verbindung zu Webseite!
+WEBSITE_NO_CONNECTION=Keine Verbindung zurWebseite!
 WEBSITE_LOGIN_ERROR=Login nicht richtig!
 WEBSITE_BLANK_LOGIN=Es sind leere Felder vorhanden!
 WEBSITE_EXIST_USER=Benutzer existiert bereits!
