--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -139,7 +139,7 @@ SING_OPTIONS_LYRICS_PROPERTY=Property
 SING_OPTIONS_LYRICS_POSITION=Position
 
 SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
-SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+SING_OPTIONS_LYRICS_STAVES_DESC=Show horizontal lines in sing screen
 SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
 SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
 SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
