--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -92,7 +92,7 @@ SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Videogröße
 SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Zwischen Vollbild- und Fenstermodus wechseln
 SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Bildschirmauflösung einstellen
 SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Überblendeffekte beim Menüwechsel anzeigen
-SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Singeffekte bei „Golden Notes“ anzeigen
+SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Singeffekte bei Goldenem Ton anzeigen
 SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Visualisierung anstatt Videos abspielen
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Anzeigegröße der Videos einstellen
 
@@ -193,25 +193,25 @@ SING_OPTIONS_ADVANCED_PARTYPOPUP=Party-Assistent
 SING_OPTIONS_ADVANCED_TOPSCORES=Höchstpunktzahlen
 
 SING_OPTIONS_ADVANCED_DEBUG_DESC=FPS anzeigen
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
-;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
-;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
-;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
-;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Stellt das Mikrofonsignal beim Singen visuell dar
+SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Bestimme, was nach der Songauswahl geschehen soll
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Das Schließen des Spiels muss noch einmal bestätigt werden
+SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Zeigt ein Menü bei der Songauswahl im Partymodus
+SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Zeigt die fünf höchsten Punktzahlen eines Spielers
 
 OPTION_VALUE_ALL=Alle
 OPTION_VALUE_PLAYER=Spieler
 
-;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
+SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronisiere den Web-Account mit dem Spiel, um deine Punktzahlen zu übermitteln
 SING_OPTIONS_NETWORK_WEBSITE=Webseite
 SING_OPTIONS_NETWORK_USERNAME=Benutzername
 SING_OPTIONS_NETWORK_PASSWORD=Passwort
 SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Spielername
 SING_OPTIONS_NETWORK_AUTO_MODE=Automatisch
 SING_OPTIONS_NETWORK_AUTO_PLAYER=Spieler
-SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto Senden (Einfach)
-SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto Senden (Mittel)
-SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto Senden (Schwierig)
+SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Autom. Senden (Einfach)
+SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Autom. Senden (Mittel)
+SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Autom. Senden (Schwierig)
 SING_OPTIONS_NETWORK_NO_DLL=Kein kompatibles Ranglisten-Plugin gefunden!
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Spieler %0:s wirklich von der Webseite %1:s löschen?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Einfg
@@ -282,22 +282,22 @@ SCORE_DOWNLOAD_SONG_UPDATE=%0:d Song(s) sind von der Webseite verschieden!
 
 SING_OPTIONS_WEBCAM_ID=Webcam
 SING_OPTIONS_WEBCAM_RESOLUTION=Auflösung
-SING_OPTIONS_WEBCAM_FPS=Bildfrequenz
-SING_OPTIONS_WEBCAM_FLIP=Drehen
+SING_OPTIONS_WEBCAM_FPS=FPS
+SING_OPTIONS_WEBCAM_FLIP=Spiegeln
 SING_OPTIONS_WEBCAM_BRIGHTNESS=Helligkeit
 SING_OPTIONS_WEBCAM_SATURATION=Sättigung
 SING_OPTIONS_WEBCAM_HUE=Farbton
 SING_OPTIONS_WEBCAM_EFFECT=Effekt
-SING_OPTIONS_WEBCAM_PREVIEW=Voransicht aktivieren
+SING_OPTIONS_WEBCAM_PREVIEW=Vorschau aktivieren
 
-;TODO: SING_OPTIONS_WEBCAM_ID_DESC=Select the webcam you want to use
-;TODO: SING_OPTIONS_WEBCAM_RESOLUTION_DESC=Select an image size for your webcam
-;TODO: SING_OPTIONS_WEBCAM_FPS_DESC=Displays the frames per second of the camera
-;TODO: SING_OPTIONS_WEBCAM_FLIP_DESC=Flip image horizontally
-;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Adjusts image brightness
-;TODO: SING_OPTIONS_WEBCAM_SATURATION_DESC=Adjusts color intensity
-;TODO: SING_OPTIONS_WEBCAM_HUE_DESC=Image color grade
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_DESC=Apply a filter to the image
+SING_OPTIONS_WEBCAM_ID_DESC=Wähle aus, welche Webcam verwendet werden soll
+SING_OPTIONS_WEBCAM_RESOLUTION_DESC=Stelle die Auflösung deiner Webcam ein
+SING_OPTIONS_WEBCAM_FPS_DESC=Zeigt die FPS deiner Webcam
+SING_OPTIONS_WEBCAM_FLIP_DESC=Spiegelt das Bild horizontal
+SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Webcam-Helligkeit anpassen
+SING_OPTIONS_WEBCAM_SATURATION_DESC=Webcam-Farbsättigung anpassen
+SING_OPTIONS_WEBCAM_HUE_DESC=Webcam-Farbton anpassen
+SING_OPTIONS_WEBCAM_EFFECT_DESC=Filter auf die Webcam anwenden
 
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Vorschau aktivieren
 SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Vorschau deaktivieren
@@ -408,15 +408,15 @@ SONG_MENU_LEGEND_UNVALIDATED=Unbestätigt
 SONG_MENU_SONG=Song
 SONG_MENU_MEDLEY=Medley
 
-SONG_MENU_NAME_SONG=Song Menü
-SONG_MENU_NAME_MEDLEY=Medley Menü
+SONG_MENU_NAME_SONG=Songmenü
+SONG_MENU_NAME_MEDLEY=Medleymenü
 SONG_MENU_ADD_SONG=Song hinzufügen
-SONG_MENU_ADD_SONG_TO_LIST=Lied zur Liste hinzufügen
+SONG_MENU_ADD_SONG_TO_LIST=Song zur Liste hinzufügen
 SONG_MENU_DELETE_SONG=Song löschen
 SONG_MENU_START_MEDLEY=Singen!
 SONG_MENU_START_5_MEDLEY=%0:d Songs singen!
-;TODO: SONG_MENU_MUTE_VOICE=Mute voice
-;TODO: SONG_MENU_RESUME_VOICE=Resume Voice
+SONG_MENU_MUTE_VOICE=Stimme stummschalten
+SONG_MENU_RESUME_VOICE=Stimmstummschaltung aufheben
 
 SONG_MENU_NAME_SORTING=Sortierungsmenü
 SONG_MENU_SORTING_APPLY=Anwenden
@@ -424,7 +424,7 @@ SONG_MENU_SORTING_APPLY=Anwenden
 SONG_MENU_OPEN_CATEGORY=Kategorie öffnen
 SONG_MENU_CLOSE_CATEGORY=Kategorie schließen
 
-SONG_SEARCH_DESC=Was wollen Sie jetzt singen?
+SONG_SEARCH_DESC=Was möchtest du jetzt singen?
 
 PARTY_MODE=Party-Modus
 PARTY_PLAYLIST=Playlist-Modus
@@ -462,40 +462,40 @@ PARTY_WIN_LEGEND_CONTINUE=Zurück zum Hauptmenü
 
 PARTY_ROUND=Runde
 PARTY_ROUND_WINNER=Sieger
-;TODO: PARTY_NOTPLAYEDYET=To be determined
+PARTY_NOTPLAYEDYET=Noch offen
 PARTY_NOBODY=Niemand
 NEXT_ROUND=Nächste Runde:
 
-PARTY_DISMISSED=Ausgeschieden!
+PARTY_DISMISSED=ist ausgeschieden!
 PARTY_SCORE_WINS=%s
-PARTY_SCORE_WINS2=Hat gewonnen!
+PARTY_SCORE_WINS2=hat gewonnen!
 
-MODE_RANDOM_NAME= zufälliger Modus
-MODE_RANDOM_DESC=Sei gespannt! Das Spiel entscheidet zufällige Spiel-Modi für euch.
+MODE_RANDOM_NAME=Zufallsmodus
+MODE_RANDOM_DESC=Seid gespannt! Das Spiel wählt zufällig Spiel-Modi für euch aus.
 
 MODE_HOLDTHELINE_NAME=Balken halten
-MODE_HOLDTHELINE_DESC=Halte deine Leistung kontinuierlich am längsten oben
+MODE_HOLDTHELINE_DESC=Halte deine Leistung am längsten von allen über dem Balken!
 
 MODE_HOLDTHELINEBLIND_NAME=Blind Balken halten
-MODE_HOLDTHELINEBLIND_DESC=Halte deine Leistung kontinuierlich am längsten oben, aber ohne Noten zu sehen
+MODE_HOLDTHELINEBLIND_DESC=Halte deine Leistung am längsten von allen über dem Balken, ohne dabei die Noten zu sehen!
 
 MODE_7000POINTS_NAME=Bis 7000
 MODE_7000POINTS_DESC=Erreiche 7000 Punkte!
 
 MODE_7000POINTSBLIND_NAME=Blind 7000
-MODE_7000POINTSBLIND_DESC=Erreiche 7000 Punkte ohne Noten zu sehen!
+MODE_7000POINTSBLIND_DESC=Erreiche 7000 Punkte, ohne Noten zu sehen!
 
 MODE_5000POINTS_NAME=Bis 5000
 MODE_5000POINTS_DESC=Erreiche 5000 Punkte!
 
 MODE_5000POINTSBLIND_NAME=Blind 5000
-MODE_5000POINTSBLIND_DESC=Erreiche 5000 Punkte ohne Noten zu sehen!
+MODE_5000POINTSBLIND_DESC=Erreiche 5000 Punkte, ohne Noten zu sehen!
 
 MODE_2000POINTS_NAME=Bis 2000
 MODE_2000POINTS_DESC=Erreiche 2000 Punkte!
 
 MODE_2000POINTSBLIND_NAME=Blind 2000
-MODE_2000POINTSBLIND_DESC=Erreiche 2000 Punkte ohne Noten zu sehen!
+MODE_2000POINTSBLIND_DESC=Erreiche 2000 Punkte, ohne Noten zu sehen!
 
 MODE_DUEL_NAME=Duell
 MODE_DUEL_DESC=Eins-gegen-Eins um die Höchstpunkzahl
@@ -503,26 +503,26 @@ MODE_DUEL_DESC=Eins-gegen-Eins um die Höchstpunkzahl
 MODE_TEAMDUEL_NAME=Team-Duell
 MODE_TEAMDUEL_DESC=Reiche das Mikrofon weiter und erreiche im Team die höchste Punktzahl!
 
-MODE_BLIND_NAME=Blind Modus
+MODE_BLIND_NAME=Blinder Modus
 MODE_BLIND_DESC=Eins-gegen-Eins mit versteckten Noten
 
 MODE_BLINDTOTAL_NAME=Totale Blindheit
-MODE_BLINDTOTAL_DESC=Kannst du's schaffen? Ohne Noten, ohne Text? Los geht's!
+MODE_BLINDTOTAL_DESC=Kannst du’s schaffen? Ohne Noten, ohne Text? Los geht’s!
 
-MODE_1000BLIND_NAME=+1000 blind
+MODE_1000BLIND_NAME=Blind bis + 1000
 MODE_1000BLIND_DESC=Erreiche einen Vorsprung von über 1000 Punkten, ohne dabei die Noten zu sehen!
 
 MODE_DEAF_NAME=Taub
-MODE_DEAF_DESC=Denkst, du kannst singen? Versuch's ohne Begleitung der Noten!
+MODE_DEAF_DESC=Du meinst, die Noten zu kennen? Versuch’s mal ohne Begleitmusik!
 
 MODE_BLINDLYRICS_NAME=Ohne Text
-MODE_BLINDLYRICS_DESC=Denkst, kennst jeden Song? Versuch's mal ohne Text!
+MODE_BLINDLYRICS_DESC=Du meinst, das Lied auswendig zu können? Versuch’s mal ohne Text!
 
-MODE_500BLIND_NAME=+500 Blind
+MODE_500BLIND_NAME=Blind bis + 500
 MODE_500BLIND_DESC=Erreiche einen Vorsprung von über 500 Punkten, ohne dabei die Noten zu sehen!
 
 MODE_SHORTSONG_NAME=Kurzes Lied
-MODE_SHORTSONG_DESC=Schnelles kurzes Duell 1-gegen-1!
+MODE_SHORTSONG_DESC=Schnelles 1-gegen-1-Duell über die erste Liedhälfte!
 
 MODE_HARDCORE_NAME=Hardcore
 MODE_HARDCORE_DESC=Umkämpfe eine Führung über 3 Phrasen hinweg und siege!
