--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -3,7 +3,7 @@ LANGUAGE=Deutsch
 LANGUAGE_ISO_CODE=de
 
 SING_LOADING=Lädt …
-SING_LOADING_SONGS=Lade Titel aus Verz.  %s
+SING_LOADING_SONGS=Lade Titel aus Verz. %s
 
 SING_SING=Singen
 SING_SING_DESC=Im Solo- oder Duettmodus singen
@@ -188,7 +188,7 @@ SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Erhöht die Lautstärke des Mikrofons
 SING_OPTIONS_ADVANCED_DEBUG=Entwickleroptionen
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oszilloskop
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Nach Songauswahl
-SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Sicherheitsabfr.
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Schließen bestätigen
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Party-Assistent
 SING_OPTIONS_ADVANCED_TOPSCORES=Höchstpunktzahlen
 
@@ -240,11 +240,11 @@ MSG_INSERT_USER_DESC=Felder eintragen:
 MSG_INSERT_USER_ADD=Hinzufügen
 MSG_INSERT_USER_CANCEL=Abbrechen
 
-WEBSITE_NO_CONNECTION=Keine Verbindung zurWebseite!
+WEBSITE_NO_CONNECTION=Keine Verbindung zur Webseite!
 WEBSITE_LOGIN_ERROR=Login nicht richtig!
 WEBSITE_BLANK_LOGIN=Es sind leere Felder vorhanden!
 WEBSITE_EXIST_USER=Benutzer existiert bereits!
-WEBSITE_ERROR_SCORE=Fehler bei Punktzahlübertragung!
+WEBSITE_ERROR_SCORE=Fehler bei Punktzahlübermittlung!
 WEBSITE_OK_SEND=Punktzahl erfolgreich übermittelt!
 WEBSITE_ERROR_SCORE_DUPLICATED=Punktzahl bereits vorhanden!
 WEBSITE_ERROR_SONG=Song nicht gefunden!
@@ -274,8 +274,8 @@ SCORE_SAVE=Speichern
 
 SCORE_DOWNLOAD_TITLE=Download
 SCORE_DOWNLOAD_SONG=Song:
-SCORE_DOWNLOAD_CREATE_LIST=Liste aufbauen...
-SCORE_DOWNLOAD_RECEIVE_LIST=Herunterladend...
+SCORE_DOWNLOAD_CREATE_LIST=Liste wird aufgebaut …
+SCORE_DOWNLOAD_RECEIVE_LIST=Lädt herunter …
 SCORE_DOWNLOAD_CANCEL=Abbrechen
 SCORE_DOWNLOAD_OK=OK
 SCORE_DOWNLOAD_SONG_UPDATE=%0:d Song(s) sind von der Webseite verschieden!
@@ -438,8 +438,8 @@ PARTY_TEAMS_PLAYER3=Spieleranzahl
 
 PARTY_LEGEND_CONTINUE=Weiter
 
-PARTY_OPTIONS_DESC=Einstellungen für das Partyspiel.
-PARTY_OPTIONS_WHEREAMI=Party Optionen
+PARTY_OPTIONS_DESC=Einstellungen für das Partyspiel
+PARTY_OPTIONS_WHEREAMI=Party-Optionen
 
 PARTY_PLAYER_ENTER_NAME=Namen eingeben
 
@@ -453,11 +453,11 @@ OPTION_VALUE_SING=Singen
 OPTION_VALUE_SELECT_PLAYERS=Spieler auswählen
 OPTION_VALUE_OPEN_MENU=Menü öffnen
 
-PARTY_SCORE_DESC=Punkte der letzten Runde.
-PARTY_SCORE_WHEREAMI=Party Punkte
+PARTY_SCORE_DESC=Punkte der letzten Runde
+PARTY_SCORE_WHEREAMI=Party-Punkte
 
-PARTY_WIN_DESC=Gewinner des Partyspiels.
-PARTY_WIN_WHEREAMI=Party Gewinner
+PARTY_WIN_DESC=Gewinner des Partyspiels
+PARTY_WIN_WHEREAMI=Party-Gewinner
 PARTY_WIN_LEGEND_CONTINUE=Zurück zum Hauptmenü
 
 PARTY_ROUND=Runde
@@ -531,7 +531,7 @@ STAT_MAIN=Statistiken
 
 STAT_OVERVIEW_INTRO=%0:s Statistiken. \n Letzter Reset am %1:.2d.%2:.2d.%3:d
 STAT_OVERVIEW_SONG=%0:d Songs (%3:d mit Video), davon wurden bereits %1:d gesungen, andere %2:d noch nicht.\nDer am häufigsten gesungene Song ist:\n"%5:s" von %4:s.
-STAT_OVERVIEW_PLAYER=Seit dem letzten Reset haben %0:d verschiedene Spieler gesungen. \n Der beste Spieler ist %1:s mit %2:d Punkten. \n Die höchste Punktzahl, %4:d, wurde von %3:s erreicht.
+STAT_OVERVIEW_PLAYER=Seid dem letzten Reset haben %0:d verschiedene Spieler gesungen. \n Der beste Spieler ist %1:s mit %2:d Punkten. \n Die höchste Punktzahl, %4:d, wurde von %3:s erreicht.
 
 STAT_FORMAT_DATE=%0:.2d.%1:.2d.%2:d
 
@@ -577,7 +577,7 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Die nächsten Spieler an die Mikros!
 PARTY_MODE_TOURNAMENT_WIN_DESC=Rundenergebnis
 PARTY_MODE_TOURNAMENT_CHAMPION=Der Champion ist: %0:s!
 
-MSG_END_JUKEBOX=Möchtest du den Jukebox Modus verlassen?
+MSG_END_JUKEBOX=Möchtest du den Jukebox-Modus verlassen?
 JUKEBOX_RANDOM=Zufallsmodus
 JUKEBOX_REPEAT=Wiederholen
 JUKEBOX_FIND=Finde:
@@ -603,7 +603,7 @@ ABOUT_CHECK_CHECKING=Suche nach Aktualisierungen …
 ABOUT_CHECK_AVAILABLE=Eine neue Version ist verfügbar
 ABOUT_CHECK_UPTODATE=WorldParty ist aktuell
 ABOUT_CHECK_CONNECTION=Keine Internetverbindung
-ABOUT_OVERVIEW=Entdecke eine neue Art, alleine oder mit Freunden zu singen. \n Spaß ist garantiert. \n\nWorldParty ist ein Zweig des originalen Ultrastar Deluxe 1.1 und wurde entworfen sowie entwickelt vom UltraStar-España-Team, der größten Karaoke-Community.\n\n\nDieses Programm ist frei und unter der GPL lizenziert. \n\n Für weitere Informationen besuche uns auf: \n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Entdecke eine neue Art, allein oder mit Freunden zu singen. \n Spaß ist garantiert. \n\nWorldParty ist ein Zweig des originalen Ultrastar Deluxe 1.1 und wurde entworfen sowie entwickelt vom UltraStar-España-Team, der größten Karaoke-Community.\n\n\nDieses Programm ist frei und unter der GPL lizenziert. \n\n Für weitere Informationen besuche uns auf: \n\nhttps://ultrastar-es.org
 
 DEVELOPERS_TITLE=Entwickelt von
 DEVELOPERS_OVERVIEW=Menschen, die zu diesem Projekt beigetragen haben:\n\n\n%s\n\n\n Besuche uns für weitere Informationen.\n%s
@@ -738,7 +738,7 @@ C_SORT=Sortieren
 C_SORT_SONGS=Lieder sortieren
 C_SOUND=Sound
 C_STATISTICS=Statistiken
-C_STATS=Stat
+C_STATS=Stat.
 
 C_THEME=Theme
 C_THEMES=Design
