--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -23,7 +23,7 @@ SING_EXIT=Beenden
 SING_EXIT_DESC=Spiel verlassen
 
 SING_ABOUT=Über
-SING_ABOUT_DESC=Über Utrastar WorldParty
+SING_ABOUT_DESC=Über Ultrastar WorldParty
 
 SING_PLAYER_TITLE=Profile
 SING_PLAYER_READY=Spieler bereit zum Singen
