--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -139,7 +139,7 @@ SING_OPTIONS_LYRICS_PROPERTY=Proprietà
 SING_OPTIONS_LYRICS_POSITION=Posizione
 
 ;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
-;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizontal lines in sing screen
 ;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
 ;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
 ;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
@@ -169,7 +169,7 @@ SING_OPTIONS_THEMES_THEME=Temi
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Colori
 
-;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and distribution of items
 ;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
 ;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
 
@@ -700,7 +700,7 @@ C_INTERNET=Internet
 C_LYRICS=Testi
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MEDLEYC=Medley calculated
 ;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Microfono
 ;TODO: C_MODE=Mode
