--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -139,7 +139,7 @@ SING_OPTIONS_LYRICS_ALPHA=Transparantie
 ;TODO: SING_OPTIONS_LYRICS_POSITION=Position
 
 ;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
-;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizontal lines in sing screen
 ;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
 ;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
 ;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
@@ -169,7 +169,7 @@ SING_OPTIONS_THEMES_THEME=Thema
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Kleur
 
-;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and distribution of items
 ;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
 ;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
 
@@ -260,7 +260,7 @@ MSG_INSERT_USER_CANCEL=Cancel
 ;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All songs
 ;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This song
 ;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
+;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connecting to the website: %0:s!
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
 
 ;TODO: SONG_SCORE_MAX=Best:
@@ -269,7 +269,7 @@ SONG_SCORE_MEDIA=Gemiddelde:
 ;TODO: SCORE_SEND_DESC=Send score
 ;TODO: SCORE_SEND=Send
 SCORE_SEND_PLAYER=Speler
-;TODO: SCORE_SEND_OTHER_USER= Other username
+;TODO: SCORE_SEND_OTHER_USER=Other username
 ;TODO: SCORE_SAVE=Save
 
 SCORE_DOWNLOAD_TITLE=Download
@@ -513,7 +513,7 @@ MODE_1000BLIND_NAME= +1000 Blind
 ;TODO: MODE_1000BLIND_DESC=Gain a lead of more than 1000 points, but without seeing the notes!
 
 MODE_DEAF_NAME= Doof
-;TODO: MODE_DEAF_DESC=Think you know the notes? Can you sing it without the acompaniment?
+;TODO: MODE_DEAF_DESC=Think you know the notes? Can you sing it without the accompaniment?
 
 ;TODO: MODE_BLINDLYRICS_NAME=No Lyrics
 ;TODO: MODE_BLINDLYRICS_DESC=Think you know all the lyrics? Sing with the lyrics hidden!
@@ -566,7 +566,7 @@ STAT_FORMAT_BANDS=%0:s \n\n %1:dx gezongen
 ;TODO: PARTY_MODE_TOURNAMENT=Tournament
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 
-;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
+;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number of players and their names
 ;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 ;TODO: PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Number of rounds
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
@@ -700,7 +700,7 @@ C_INTERNET=Internet
 C_LYRICS=Tekst
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MEDLEYC=Medley calculated
 ;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Opname
 ;TODO: C_MODE=Mode
