--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -139,7 +139,7 @@ SING_OPTIONS_LYRICS_PROPERTY=Propriété
 SING_OPTIONS_LYRICS_POSITION=Position
 
 ;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
-;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizontal lines in sing screen
 ;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
 ;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
 ;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
@@ -169,7 +169,7 @@ SING_OPTIONS_THEMES_THEME=Thèmes
 SING_OPTIONS_THEMES_SKIN=Aspect
 SING_OPTIONS_THEMES_COLOR=Couleur
 
-;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and distribution of items
 ;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
 ;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
 
