--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -139,7 +139,7 @@ SING_OPTIONS_LYRICS_PROPERTY=Nuosavybė
 SING_OPTIONS_LYRICS_POSITION=Pozicija
 
 ;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
-;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizontal lines in sing screen
 ;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
 ;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
 ;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
@@ -169,7 +169,7 @@ SING_OPTIONS_THEMES_THEME=Tema
 SING_OPTIONS_THEMES_SKIN=Odos
 SING_OPTIONS_THEMES_COLOR=Spalva
 
-;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and distribution of items
 ;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
 ;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
 
@@ -260,7 +260,7 @@ WEBSITE_LOGIN_ERROR=Neteisingas prisijungimas!
 SONG_MENU_REFRESH_SCORES_ALL_SONGS=Visos dainos
 SONG_MENU_REFRESH_SCORES_ONLY_SONG=Ši daina
 ;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
+;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connecting to the website: %0:s!
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
 
 ;TODO: SONG_SCORE_MAX=Best:
@@ -269,7 +269,7 @@ SONG_SCORE_MEDIA=Vidurkis:
 ;TODO: SCORE_SEND_DESC=Send score
 SCORE_SEND=Siųsti
 SCORE_SEND_PLAYER=Žaidėjas
-;TODO: SCORE_SEND_OTHER_USER= Other username
+;TODO: SCORE_SEND_OTHER_USER=Other username
 ;TODO: SCORE_SAVE=Save
 
 SCORE_DOWNLOAD_TITLE=Parsisiųsti
@@ -513,7 +513,7 @@ MODE_1000BLIND_NAME= +1000 Aklas
 ;TODO: MODE_1000BLIND_DESC=Gain a lead of more than 1000 points, but without seeing the notes!
 
 ;TODO: MODE_DEAF_NAME=Deaf
-;TODO: MODE_DEAF_DESC=Think you know the notes? Can you sing it without the acompaniment?
+;TODO: MODE_DEAF_DESC=Think you know the notes? Can you sing it without the accompaniment?
 
 MODE_BLINDLYRICS_NAME= Nėra dainų
 ;TODO: MODE_BLINDLYRICS_DESC=Think you know all the lyrics? Sing with the lyrics hidden!
@@ -530,7 +530,7 @@ MODE_HARDCORE_NAME=Hardcore
 STAT_MAIN=Statistika
 
 ;TODO: STAT_OVERVIEW_INTRO=%0:s Statistics.  \n Last Reset at %2:.2d.%1:.2d.%3:d
-;TODO: STAT_OVERVIEW_SONG=%0:d Songs(%3:d with Video), whereof %1:d already were played  and %2:d were not played yet.\n The most popular Song is %5:s from %4:s.
+;TODO: STAT_OVERVIEW_SONG=%0:d Songs(%3:d with Video), whereof %1:d already were played and %2:d were not played yet.\n The most popular Song is %5:s from %4:s.
 ;TODO: STAT_OVERVIEW_PLAYER=Since the last Reset there were/was %0:d different Player(s).\n The best Player is %1:s with an average Score of %2:d Points.\n %3:s did the highest Score with %4:d Points.
 
 ;TODO: STAT_FORMAT_DATE=%1:.2d.%0:.2d.%2:d
@@ -566,7 +566,7 @@ PARTY_MODE_CHALLENGE=Iššūkis
 PARTY_MODE_TOURNAMENT=Turnyras
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 
-;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
+;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number of players and their names
 ;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 ;TODO: PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Number of rounds
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
@@ -622,8 +622,8 @@ MSG_ERROR_TITLE=Klaida
 ERROR_LOADING_SONGS=Wait for loading all the songs
 ;TODO: ERROR_CORRUPT_SONG=Song could not be loaded.
 ;TODO: ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Song could not be loaded: File not found
-;TODO: ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can''t find any notes
-;TODO: ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can''t find any linebreaks
+;TODO: ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can't find any notes
+;TODO: ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can't find any line breaks
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
 ;TODO: ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones\n\n Please check your microphone options
 ;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone\n\n Please check your microphone options
@@ -700,7 +700,7 @@ C_INTERNET=Internetas
 C_LYRICS=Dainos žodžiai
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MEDLEYC=Medley calculated
 ;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Įrašyti
 ;TODO: C_MODE=Mode
