--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -139,7 +139,7 @@ SING_OPTIONS_LYRICS_ALPHA=Транспарентност
 ;TODO: SING_OPTIONS_LYRICS_POSITION=Position
 
 ;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
-;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizontal lines in sing screen
 ;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
 ;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
 ;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
@@ -169,7 +169,7 @@ SING_OPTIONS_THEMES_THEME=Tema
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Boja
 
-;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and distribution of items
 ;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
 ;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
 
@@ -260,7 +260,7 @@ SONG_MENU_REFRESH_SCORES_FILE=Филе
 ;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All songs
 ;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This song
 ;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
+;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connecting to the website: %0:s!
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
 
 ;TODO: SONG_SCORE_MAX=Best:
@@ -269,7 +269,7 @@ SONG_MENU_REFRESH_SCORES_FILE=Филе
 ;TODO: SCORE_SEND_DESC=Send score
 ;TODO: SCORE_SEND=Send
 SCORE_SEND_PLAYER=Играч
-;TODO: SCORE_SEND_OTHER_USER= Other username
+;TODO: SCORE_SEND_OTHER_USER=Other username
 ;TODO: SCORE_SAVE=Save
 
 SCORE_DOWNLOAD_TITLE=Преузимање
@@ -513,7 +513,7 @@ MODE_1000BLIND_NAME= +1000 Слеп
 ;TODO: MODE_1000BLIND_DESC=Gain a lead of more than 1000 points, but without seeing the notes!
 
 MODE_DEAF_NAME= Глуви
-;TODO: MODE_DEAF_DESC=Think you know the notes? Can you sing it without the acompaniment?
+;TODO: MODE_DEAF_DESC=Think you know the notes? Can you sing it without the accompaniment?
 
 ;TODO: MODE_BLINDLYRICS_NAME=No Lyrics
 ;TODO: MODE_BLINDLYRICS_DESC=Think you know all the lyrics? Sing with the lyrics hidden!
@@ -566,7 +566,7 @@ PARTY_MODE_CLASSIC=Цлассиц
 ;TODO: PARTY_MODE_TOURNAMENT=Tournament
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 
-;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
+;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number of players and their names
 ;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 ;TODO: PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Number of rounds
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
@@ -622,8 +622,8 @@ ERROR_NO_PLUGINS=Nema ucitanih plugin-ova
 ERROR_LOADING_SONGS=Wait for loading all the songs
 ERROR_CORRUPT_SONG=Pesma se ne moze ucitati.
 ;TODO: ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Song could not be loaded: File not found
-;TODO: ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can''t find any notes
-;TODO: ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can''t find any linebreaks
+;TODO: ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can't find any notes
+;TODO: ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can't find any line breaks
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Играч %d додељује се вишеструким микрофонима\n\n Проверите опције микрофона
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Играч %d није додељен микрофону\n\n Проверите опције микрофона
@@ -700,7 +700,7 @@ C_GRAPHICS=Grafika
 C_LYRICS=Lirike
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MEDLEYC=Medley calculated
 ;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Snimanje
 ;TODO: C_MODE=Mode
